--- a/index.html
+++ b/index.html
@@ -16,15 +16,27 @@
                     <input type="text" name="ville" id="ville" placeholder="Ville">
                     <button id="but">lancé</button>
                     <div id="ici">
-                        <div>temperature : <span id="temp"></span></div>
-                        <div>Vent : <span id="vent"></span></div>
-                        <div>Humidité : <span id="humide"></span></div>
-                        <div>temperatur min : <span id="tempMin"></span></div>
-                        <div>temperatur max : <span id="tempMax"></span></div>
+                        <div id="droite">
+                            <div>temperature :</div>
+                            <div>Vent :</div>
+                            <div>Humidité :</div>
+                            <div>temperatur min :</div>
+                            <div>temperatur max :</div>
+                        </div>
+                        <div id="gauche">
+                            <div><span id="temp"></span></div>
+                            <div><span id="vent"></span></div>
+                            <div><span id="humide"></span></div>
+                            <div><span id="tempMin"></span></div>
+                            <div><span id="tempMax"></span></div>
+                        </div>
+
                     </div>
                 </div>
             </div>
-            <div id="divImg"></div>
+            <div id="divImg">
+                <img src="couvert-avec-du-soleil-19896.jpg" id="img1"/>
+            </div>
         </div>
     </div>
 
