--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
                     <button id="but">lancé</button>
                     <div id="ici">
                         <div id="droite">
-                            <div>temperature :</div>
-                            <div>Vent :</div>
-                            <div>Humidité :</div>
-                            <div>temperatur min :</div>
-                            <div>temperatur max :</div>
+                            <div class="reponses1">temperature :</div>
+                            <div class="reponses1">Vent :</div>
+                            <div class="reponses1">Humidité :</div>
+                            <div class="reponses1">temperatur min :</div>
+                            <div class="reponses1">temperatur max :</div>
                         </div>
                         <div id="gauche">
-                            <div><span id="temp"></span></div>
-                            <div><span id="vent"></span></div>
-                            <div><span id="humide"></span></div>
-                            <div><span id="tempMin"></span></div>
-                            <div><span id="tempMax"></span></div>
+                            <div class="reponses"><span id="temp"></span></div>
+                            <div class="reponses"><span id="vent"></span></div>
+                            <div class="reponses"><span id="humide"></span></div>
+                            <div class="reponses"><span id="tempMin"></span></div>
+                            <div class="reponses"><span id="tempMax"></span></div>
                         </div>
 
                     </div>
