--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Appli Meteo</title>
     <link rel="stylesheet" href="style.css">
-    <script src="app.js" async></script>
+
 </head>
 <body>
 
@@ -39,6 +39,9 @@
             </div>
         </div>
     </div>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="app.js" defer></script>
 
 </body>
 </html>
